trabajé el título página lo más pedido. trabajé el estilo de titulo página lo más visto. trabajé responsive 360 y 380, funciona al 100%

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -43,12 +43,6 @@
         margin-top: 35px;
     }
 
-    /* .work_section .work_container .box.b-1,
-    .work_section .work_container .box.b-2,
-    .work_section .work_container .box.b-3,
-    .work_section .work_container .box.b-4 {
-        width: 100%;
-    } */
     #categoriasDestacadas{
         padding: 30px 15px;
     }
@@ -103,7 +97,18 @@
     }
 }
 
-@media (max-width: 360px) {}
+@media (max-width: 360px) {
+    .container{
+        max-width: 70%;
+    }
+    }
+@media (max-width: 380px) {
+    .container{
+        max-width: 70%;
+    }
+   
+}
+
 
 @media (min-width: 1200px) {
     .container {
