--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ body {
   background-color: #101112;
   background-image: url(../images/hero.png);
   background-size: cover;
+  object-fit: cover;
 }
 
 .sub_page .hero_area {
@@ -243,6 +244,12 @@ a:focus {
   border-radius: 100%;
   opacity: 1;
 }
+.heading_container h2 {
+    font-weight: bold;
+    text-transform: uppercase;
+    position: relative;
+}
+
 
 .do_section .heading_container {
   -webkit-box-align: center;
@@ -354,47 +361,17 @@ a:focus {
   color: #353434;
 }
 
-/* .work_section .work_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 0 -1%;
-}
-
-.work_section .work_container .box {
-  min-width: 300px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
-}
-
-.work_section .work_container .box img {
-  width: 100%;
-}
-
-.work_section .work_container .box.b-2, .work_section .work_container .box.b-3 {
-  width: 50%;
-}
-
-.work_section .work_container .box.b-1, .work_section .work_container .box.b-4 {
-  width: 50%;
-} */
 #categoriasDestacadas{
   padding: 60px 60px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 #categoriasDestacadas h2{
-  color: olive;
-  font-weight: 600;
-  font-size: 65px;
-  text-align: center;
-  margin-bottom: 32px;
+  font-weight: bold;
+  text-transform: uppercase;
+  position: relative;
+  
 }
 #categoriasDestacadas .contenedor-categorias{
   display: flex;
