--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ a:focus {
 }
 
 .custom_nav-container .navbar-toggler .navbar-toggler-icon {
-  background-image: url(../images/hero.png);
+  background-image: url(../images/menu.png);
   background-size: 55px;
 }
 
