--- a/ejemplo-grid/estilo.css
+++ b/ejemplo-grid/estilo.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Crea 3 columnas de igual ancho */
-  grid-gap: 10px; /* Espacio entre los elementos */
+  grid-template-columns: repeat(3, 1fr); 
+  grid-gap: 10px; 
 }
 
 .item {
